package com.scoreassistant.adapter.out.persistence;

import com.scoreassistant.domain.model.AttachmentEntity;
import org.springframework.data.r2dbc.repository.Query;
import org.springframework.data.r2dbc.repository.R2dbcRepository;
import org.springframework.stereotype.Repository;
import reactor.core.publisher.Flux;

import java.util.UUID;

@Repository
public interface AttachmentRepository extends R2dbcRepository<AttachmentEntity, UUID> {

    @Query("SELECT * FROM attachment WHERE grade_record_id = :gradeRecordId AND deleted_at IS NULL")
    Flux<AttachmentEntity> findByGradeRecordId(UUID gradeRecordId);
}
